--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,13 @@
       {
         "name": "next"
       }
+      
     ],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "baseUrl": ".",
+   
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
